--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,21 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/mysql?useSSL=false&useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://127.0.0.1:3306/mysql?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
     username: root
     password: 123456
-    type:
+    type: com.alibaba.druid.pool.DruidDataSource
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*Mapper.xml
-  type-aliases-package: com.hps.ds.domain
+  type-aliases-package: cn.itcast.model.gen
 logging:
   level:
     com.hps: debug
 server:
   port: 8081
+  redis:
+    host: localhost
+    port: 6379
 
 path:
   image:
