--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
             <version>5.1.9.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-beta-3</version>
+        </dependency>
     </dependencies>
 
     <build>
